--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,8 @@ html {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  color: #25b09b;
+  /* color: #25b09b; */
+  color: red;
   box-shadow: calc(1 * var(--d)) calc(0 * var(--d)) 0 0,
     calc(0.707 * var(--d)) calc(0.707 * var(--d)) 0 1px,
     calc(0 * var(--d)) calc(1 * var(--d)) 0 2px,
